changing all githubs

--- a/calamares/modules/packages.conf
+++ b/calamares/modules/packages.conf
@@ -160,9 +160,9 @@ update_system: false
 #
 operations:
   - remove:
-    - calamares
+    - arco-calamares
     - arcolinux-system-installation-git
-    - arcolinuxb-calamares-openbox-git
+    - arcob-calamares-config-openbox-git
     - ckbcomp
     - kpmcore
     - plasma-framework
