--- a/calamares/modules/netinstall.yaml
+++ b/calamares/modules/netinstall.yaml
@@ -221,6 +221,8 @@
     - moka-icon-theme
     - numix-circle-arc-icons-git
     - numix-circle-icon-theme-git
+    - numix-gtk-theme
+    - openbox-themes-pambudi-git
     - oxy-neon
     - paper-icon-theme
     - papirus-icon-theme
